# OSA3

./: CMakeLists.txt  Makefile  Readme  Under the Southern Cross.txt  assignment3  assignment3.py  man.txt
Project/: assignment3.py
Text Files/: Memories of my life : From my early days in Scotland till the present day in Adelaide.txt
TextUTC8/: A Narrative of Adenture in Cannibal-land.txt
